

10.3.x.x (relative to 10.2.x.x)
========

Improvements
----

- IECoreArnold : Prepare for multiple universes (#1171)

Fixes
-----

- StreamIndexedIO : Fixed memory leak when passing `NullIfMissing` or `ThrowIfMissing` to `directory()` (#1181).
- Build : Fixed build error when running `scons` via Python 3 (#1184).

Breaking Changes
----------------
- HeaderGenerator : `machineName`, `systemRelease`, `systemVersion`, may differ from previous versions on Windows. Linux and MacOS are unaffected.
- HeaderGenerator : `nodeName` is no longer converted to all capital letters and may differ from previous versions on Windows. Linux and MacOS are unaffected.

10.2.x.x (relative to 10.2.2.0)
========

Improvements
-----

- IECoreUSD SceneCacheFileFormat : Added support for per frame writing (#1178).
  - This can be used in conjunction with Houdini Solaris "flush after each frame" write mode.
  - It will limit the time samples to the frame range supplied via SdfFileFormatArgs.
- TBB binding : Added Python binding for `tbb_global_control.active_value()` (#1189).
- IECoreNuke : Removed Op menu (#1186).

Fixes
----

- IECoreAlembic : Fixed reading/writing indexed UVs for curves (#1179)

10.2.2.0 (relative to 10.2.1.0)
========

Improvements
------------

- UniverseBlock : Added `universe()` method (#1177).

Fixes
-----

- ExceptionBinding : Fixed reference counting bug which leaked Python reference objects (#1173).

10.2.1.0 (relative to 10.2.0.1)
========

Improvements
------------

- USDScene : Added basic support for custom attributes (#1172).
- PrimitiveVariable::IndexedView (#1170) :
	- Added `isValid()` method.
	- Added explicit conversion to bool.

Fixes
-----

- TextureLoader : Fixed alpha handling bug when applying colour transforms (#1169).
- TypedData : Fixed template instantiation warnings on Windows (#1166).

10.2.0.1 (relative to 10.2.0.0)
=======

Fixes
-----

- Maya and Houdini LiveScene : Fixed for updated SceneInterface (#1168)